+ observable collection demo

--- a/Sample.WPF/Views/ObservableCollectionView.xaml
+++ b/Sample.WPF/Views/ObservableCollectionView.xaml
@@ -11,5 +11,45 @@
     Height="450"
     x:TypeArguments="viewModels:ObservableCollectionViewModel"
     mc:Ignorable="d">
-    <Grid />
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <Border Grid.Column="0" Padding="5">
+            <StackPanel>
+                <Button
+                    Margin="0,0,0,5"
+                    Command="{Binding ClearCommand}"
+                    Content="Clear items" />
+                <Button
+                    Margin="0,0,0,5"
+                    Command="{Binding AddItemCommand}"
+                    Content="Add an item" />
+                <Button
+                    Margin="0,0,0,5"
+                    Command="{Binding AddItemsCommand}"
+                    Content="Add 5 items" />
+                <Button
+                    Margin="0,0,0,5"
+                    Command="{Binding ReplaceWithItemCommand}"
+                    Content="Replace with an item" />
+                <Button Command="{Binding ReplaceWithItemsCommand}" Content="Replace with 5 items" />
+            </StackPanel>
+        </Border>
+
+        <ScrollViewer Grid.Column="1">
+            <Border Padding="5">
+                <ItemsControl ItemsSource="{Binding Items}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Name}" />
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </Border>
+        </ScrollViewer>
+
+    </Grid>
 </darkViews:DarkWpfViewBase>
