--- a/Sample.WPF/Views/CommandsView.xaml
+++ b/Sample.WPF/Views/CommandsView.xaml
@@ -1,26 +1,28 @@
 ﻿<darkViews:DarkWpfViewBase
-    x:Class="Sample.WPF.Views.HomeView"
+    x:Class="Sample.WPF.Views.CommandsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:darkViews="clr-namespace:DarkHelpers.WPF;assembly=DarkHelpers.WPF"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewModels="clr-namespace:Sample.WPF.ViewModels"
-    Title="Home"
-    Width="450"
-    Height="300"
-    x:TypeArguments="viewModels:HomeViewModel"
+    Title="Commands demo"
+    Width="800"
+    Height="450"
+    x:TypeArguments="viewModels:CommandsViewModel"
     mc:Ignorable="d">
     <Border Padding="5">
         <WrapPanel>
             <Button
                 Margin="5"
-                Command="{Binding ObservableCollectionCommand}"
-                Content="Observable collection demo" />
+                Command="{Binding NormalCommand}"
+                Content="Synchronous command"
+                IsEnabled="{Binding IsNotBusy}" />
             <Button
                 Margin="5"
-                Command="{Binding CommandsCommand}"
-                Content="Commands demo" />
+                Command="{Binding AsynchronousCommand}"
+                Content="Asynchronous command"
+                IsEnabled="{Binding IsNotBusy}" />
         </WrapPanel>
     </Border>
 </darkViews:DarkWpfViewBase>
