+ sample xamarin.forms project (empty) + xamarin.forms DarkHelpers library (empty) * moved shared sample logic to a shared library

--- a/Sample.WPF/Views/ObservableCollectionView.xaml
+++ b/Sample.WPF/Views/ObservableCollectionView.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:darkViews="clr-namespace:DarkHelpers.WPF;assembly=DarkHelpers.WPF"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:viewModels="clr-namespace:Sample.WPF.ViewModels"
+    xmlns:viewModels="clr-namespace:Sample.Lib.ViewModels;assembly=Sample.Lib"
     Title="Observable collection demo"
     Width="800"
     Height="450"
