--- a/Sample.XF/Sample.XF/Views/ObservableCollectionView.xaml
+++ b/Sample.XF/Sample.XF/Views/ObservableCollectionView.xaml
@@ -36,6 +36,33 @@
                     IsEnabled="{Binding IsNotBusy}"
                     Text="Replace with 5 items" />
 
+
+                <Button
+                    Margin="5"
+                    Command="{Binding ClearAsyncCommand}"
+                    IsEnabled="{Binding IsNotBusy}"
+                    Text="Clear items async" />
+                <Button
+                    Margin="5"
+                    Command="{Binding AddItemAsyncCommand}"
+                    IsEnabled="{Binding IsNotBusy}"
+                    Text="Add an item async" />
+                <Button
+                    Margin="5"
+                    Command="{Binding AddItemsAsyncCommand}"
+                    IsEnabled="{Binding IsNotBusy}"
+                    Text="Add 5 items async" />
+                <Button
+                    Margin="5"
+                    Command="{Binding ReplaceWithItemAsyncCommand}"
+                    IsEnabled="{Binding IsNotBusy}"
+                    Text="Replace with an item async" />
+                <Button
+                    Margin="5"
+                    Command="{Binding ReplaceWithItemsAsyncCommand}"
+                    IsEnabled="{Binding IsNotBusy}"
+                    Text="Replace with 5 items async" />
+
                 <StackLayout BindableLayout.ItemsSource="{Binding Items}">
                     <BindableLayout.ItemTemplate>
                         <DataTemplate>
