--- a/samples/Sample.XF/Sample.XF/App.xaml
+++ b/samples/Sample.XF/Sample.XF/App.xaml
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<Application xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Sample.XF.App">
+<Application
+    x:Class="Sample.XF.App"
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:converters="clr-namespace:Sample.XF.Converters">
     <!--
         Define global resources and styles here, that apply to all pages in your app.
     -->
@@ -9,7 +11,7 @@
         <ResourceDictionary>
             <Color x:Key="Primary">#2196F3</Color>
             <Style TargetType="Button">
-                <Setter Property="TextColor" Value="White"></Setter>
+                <Setter Property="TextColor" Value="White" />
                 <Setter Property="VisualStateManager.VisualStateGroups">
                     <VisualStateGroupList>
                         <VisualStateGroup x:Name="CommonStates">
@@ -27,6 +29,8 @@
                     </VisualStateGroupList>
                 </Setter>
             </Style>
-        </ResourceDictionary>        
+
+            <converters:ToUpperCaseTextConverter x:Key="ToUpperCaseTextConverter" />
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
