--- a/samples/Sample.WPF/App.xaml
+++ b/samples/Sample.WPF/App.xaml
@@ -1,12 +1,15 @@
 ﻿<Application
     x:Class="Sample.WPF.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:Sample.WPF.Converters">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Themes/generic.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <converters:ToUpperCaseTextConverter x:Key="ToUpperCaseTextConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
